--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="navbar">
           <nav>
-            <ul>
+            <ul class="ul">
               <li><a href="#">HOME </a></li>
               <li><a href="#">ABOUT US</a></li>
               <li><a href="#diet">OUR DEIT</a></li>
